--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,8 +1,12 @@
 <h2>Products</h2>
 
+<h2>Products</h2>
 
-<!-- 
-Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
--->
+<!-- Mostro lista dei prodotti -->
+<div *ngFor="let product of products">
+
+    <h3>
+        {{ product.name }}
+    </h3>
+
+</div>
