--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -9,4 +9,7 @@
         {{ product.name }}
     </h3>
 
+    <div *ngIf="product.price < 1000 ">
+      <h6>PRODOTTO ECONOMICO</h6>
+    </div>
 </div>
